examples/test/testpolicy8872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8872
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key6: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value23
          key19: value8
          key16: value35
      podSelector:
        matchLabels:
          key36: value23
          key28: value26
          key17: value32
